--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 				border-bottom: 1px solid #e0e0e0;
 			}
 			
+			.caption {
+			
+			}
+
 			.hoverable:hover {
 				background-color: #81C784;
 				color: #fff;
@@ -60,7 +64,7 @@
 				<li><a href="#!">First Sidebar Link</a></li>
 				<li><a href="#!">Second Sidebar Link</a></li>
 			</ul>
-			<a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
+			<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 		</header>		
 		<main>		   
 			<div class="section"> 
@@ -70,7 +74,7 @@
 							<img src="http://2.bp.blogspot.com/_TIxEAsjeuBw/TPRyV0KDn_I/AAAAAAAACEU/PhycCNK-QTk/s1600/P1010026.JPG"><!-- random image -->
 							<div class="caption center-align">
 								<h5 class="light grey-text text-lighten-3">where learning...</h5>
-								<h2 class="purple-text">Excites</h2>
+								<h2 class="indigo-text text-darken-1">Excites</h2>
 							</div>
 						</li>
 						<li>
@@ -92,7 +96,7 @@
 			</div>
 			<div class="container section"> 
 				<div class="row valign-wrapper" style="min-height:400px">
-					<blockquote class="valign flow-text container hoverable">SILC is dedicated to teaching our communities about the laguages and cultures of India. As a part of that commitment, we offer the following learning tools. </blockquote>
+					<blockquote class="valign col flow-text s12 m6 hoverable">SILC is dedicated to teaching our communities about the laguages and cultures of India. As a part of that commitment, we offer the following learning tools. </blockquote>
 				</div>
 			</div>   
 			<div class="container section"> 
@@ -170,12 +174,12 @@
 		<footer class="page-footer white grey-text text-darken-2">
 			<div class="container">
 				<div class="row">
-					<div class="col l6 s12 hoverable">
+					<blockquote class="col l6 s12 hoverable">
 						<h5 class="text-darken-4">About SILC</h5>
 						<p>
 							SILC is the School for Indian Language and Culture in Minnesota, established in 1979. Its mission is to promote community for those whose family or culture includes India and to promote deeper understanding of its rich diversity, history, culture, natural resources, festivals, games, food, art, dance, music and more!
 						</p>
-					</div>
+					</blockquote>
 					<div class="col l4 offset-l2 s12">
 						<h5 class="">Connect</h5>
 						<ul>
