--- a/tiles.html
+++ b/tiles.html
@@ -27,7 +27,7 @@
 		<div id="rules" class="modal bottom-sheet">
 			<div class="modal-content container">
 				<h4>How to play</h4>
-				<p class="flow-text">Tell a story using the tiles displayed. Begin with, "Once upon a time..." Take turns choosing a tile and incorporate that image into your story. Its okay if you have different opinions on what an image means or how it fits into the story, that's the point. Be creative and enjoy!</p>
+				<p class="flow-text">Tell a story using the tiles above. Begin with, "Once upon a time..." Take turns choosing a tile and incorporate that image into your story. Its okay if you have different opinions on what an image means or how it fits into the story, that's the point. Be creative and enjoy!</p>
 			</div>
 			<div class="modal-footer"></div>
 		</div>
